assets/overlays/openstack-manila/generated/standalone/controller.yaml
# Generated file. Do not edit. Update using "make update".
#
# Loaded from base/controller.yaml
# Applied strategic merge patch overlays/openstack-manila/patches/controller_add_driver.yaml
# provisioner.yaml: Loaded from common/sidecars/provisioner.yaml
# provisioner.yaml: Added arguments [--timeout=120s --feature-gates=Topology=true]
# Applied strategic merge patch provisioner.yaml
# resizer.yaml: Loaded from common/sidecars/resizer.yaml
# resizer.yaml: Added arguments [--timeout=240s --handle-volume-inuse-error=false]
# Applied strategic merge patch resizer.yaml
# snapshotter.yaml: Loaded from common/sidecars/snapshotter.yaml
# Applied strategic merge patch snapshotter.yaml
# pod_network_livenessprobe.yaml: Loaded from common/sidecars/pod_network_livenessprobe.yaml
# pod_network_livenessprobe.yaml: Added arguments [--probe-timeout=10s]
# Applied strategic merge patch pod_network_livenessprobe.yaml
# Applied strategic merge patch common/standalone/controller_add_affinity.yaml
# Applied strategic merge patch common/readOnlyRootFilesystem.yaml
# Applied strategic merge patch overlays/openstack-manila/patches/modify_anti_affinity_selector.yaml
#
#

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.openshift.io/inject-proxy: csi-driver
    config.openshift.io/inject-proxy-cabundle: csi-driver
  name: openstack-manila-csi-controllerplugin
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: openstack-manila-csi
      component: controllerplugin
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict-local-volumes: socket-dir
        openshift.io/required-scc: restricted-v2
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        app: openstack-manila-csi
        component: controllerplugin
        openshift.storage.network-policy.all-egress: allow
        openshift.storage.network-policy.api-server: allow
        openshift.storage.network-policy.dns: allow
        openshift.storage.network-policy.metrics-range: allow
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: openstack-manila-csi
                  component: controllerplugin
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --provide-controller-service=true
        - --provide-node-service=false
        - --v=${LOG_LEVEL}
        - --cluster-id=${CLUSTER_ID}
        - --nodeid=$(NODE_ID)
        - --endpoint=$(CSI_ENDPOINT)
        - --drivername=$(DRIVER_NAME)
        - --share-protocol-selector=$(MANILA_SHARE_PROTO)
        - --fwdendpoint=$(FWD_CSI_ENDPOINT)
        image: ${DRIVER_IMAGE}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: healthz
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
        name: csi-driver
        ports:
        - containerPort: 10306
          name: healthz
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /plugin
          name: socket-dir
        - mountPath: /etc/openstack
          name: cloud-credentials
          readOnly: true
        - mountPath: /etc/kubernetes/static-pod-resources/configmaps/cloud-config
          name: legacy-cacert
      - args:
        - --nodeid=$(NODE_ID)
        - --endpoint=unix://plugin/csi-nfs.sock
        - --mount-permissions=0777
        image: ${NFS_DRIVER_IMAGE}
        imagePullPolicy: IfNotPresent
        name: csi-driver-nfs
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /plugin
          name: socket-dir
      - args:
        - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
        - --http-endpoint=localhost:8203
        - --leader-election
        - --leader-election-lease-duration=${LEADER_ELECTION_LEASE_DURATION}
        - --leader-election-renew-deadline=${LEADER_ELECTION_RENEW_DEADLINE}
        - --leader-election-retry-period=${LEADER_ELECTION_RETRY_PERIOD}
        - --leader-election-namespace=${NODE_NAMESPACE}
        - --v=${LOG_LEVEL}
        - --timeout=120s
        - --feature-gates=Topology=true
        env: []
        image: ${PROVISIONER_IMAGE}
        imagePullPolicy: IfNotPresent
        name: csi-provisioner
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/lib/csi/sockets/pluginproxy/
          name: socket-dir
      - args:
        - --secure-listen-address=0.0.0.0:9203
        - --upstream=http://127.0.0.1:8203/
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --tls-cipher-suites=${TLS_CIPHER_SUITES}
        - --tls-min-version=${TLS_MIN_VERSION}
        - --tls-curve-preferences=${TLS_CURVE_PREFERENCES}
        - --logtostderr=true
        image: ${KUBE_RBAC_PROXY_IMAGE}
        imagePullPolicy: IfNotPresent
        name: provisioner-kube-rbac-proxy
        ports:
        - containerPort: 9203
          name: provisioner-m
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/tls/private
          name: metrics-serving-cert
      - args:
        - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
        - --http-endpoint=localhost:8204
        - --leader-election
        - --leader-election-lease-duration=${LEADER_ELECTION_LEASE_DURATION}
        - --leader-election-renew-deadline=${LEADER_ELECTION_RENEW_DEADLINE}
        - --leader-election-retry-period=${LEADER_ELECTION_RETRY_PERIOD}
        - --leader-election-namespace=${NODE_NAMESPACE}
        - --v=${LOG_LEVEL}
        - --timeout=240s
        - --handle-volume-inuse-error=false
        env: []
        image: ${RESIZER_IMAGE}
        imagePullPolicy: IfNotPresent
        name: csi-resizer
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/lib/csi/sockets/pluginproxy/
          name: socket-dir
      - args:
        - --secure-listen-address=0.0.0.0:9204
        - --upstream=http://127.0.0.1:8204/
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --tls-cipher-suites=${TLS_CIPHER_SUITES}
        - --tls-min-version=${TLS_MIN_VERSION}
        - --tls-curve-preferences=${TLS_CURVE_PREFERENCES}
        - --logtostderr=true
        image: ${KUBE_RBAC_PROXY_IMAGE}
        imagePullPolicy: IfNotPresent
        name: resizer-kube-rbac-proxy
        ports:
        - containerPort: 9204
          name: resizer-m
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/tls/private
          name: metrics-serving-cert
      - args:
        - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
        - --metrics-address=localhost:8205
        - --leader-election
        - --leader-election-lease-duration=${LEADER_ELECTION_LEASE_DURATION}
        - --leader-election-renew-deadline=${LEADER_ELECTION_RENEW_DEADLINE}
        - --leader-election-retry-period=${LEADER_ELECTION_RETRY_PERIOD}
        - --leader-election-namespace=${NODE_NAMESPACE}
        - --v=${LOG_LEVEL}
        env: []
        image: ${SNAPSHOTTER_IMAGE}
        imagePullPolicy: IfNotPresent
        name: csi-snapshotter
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/lib/csi/sockets/pluginproxy/
          name: socket-dir
      - args:
        - --secure-listen-address=0.0.0.0:9205
        - --upstream=http://127.0.0.1:8205/
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --tls-cipher-suites=${TLS_CIPHER_SUITES}
        - --tls-min-version=${TLS_MIN_VERSION}
        - --tls-curve-preferences=${TLS_CURVE_PREFERENCES}
        - --logtostderr=true
        image: ${KUBE_RBAC_PROXY_IMAGE}
        imagePullPolicy: IfNotPresent
        name: snapshotter-kube-rbac-proxy
        ports:
        - containerPort: 9205
          name: snapshotter-m
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/tls/private
          name: metrics-serving-cert
      - args:
        - --csi-address=/csi/csi.sock
        - --health-port=10306
        - --v=${LOG_LEVEL}
        - --probe-timeout=10s
        env: []
        image: ${LIVENESS_PROBE_IMAGE}
        imagePullPolicy: IfNotPresent
        name: csi-liveness-probe
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: system-cluster-critical
      serviceAccountName: manila-csi-driver-controller-sa
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - emptyDir: {}
        name: socket-dir
      - name: metrics-serving-cert
        secret:
          secretName: manila-csi-driver-controller-metrics-serving-cert
      - name: cloud-credentials
        projected:
          sources:
          - secret:
              items:
              - key: clouds.yaml
                path: clouds.yaml
              name: manila-cloud-credentials
          - secret:
              items:
              - key: cacert
                path: ca.crt
              name: manila-cloud-credentials
              optional: true
      - configMap:
          items:
          - key: ca-bundle.pem
            path: ca-bundle.pem
          name: cloud-provider-config
          optional: true
        name: legacy-cacert
