assets/overlays/openstack-manila/generated/standalone/service.yaml
# Generated file. Do not edit. Update using "make update".
#
# Loaded from base/controller_metrics_service.yaml
# Applied strategic merge patch common/metrics/service_add_port.yaml
# Applied strategic merge patch common/metrics/service_add_port.yaml
# Applied strategic merge patch common/metrics/service_add_port.yaml
# Applied strategic merge patch common/metrics/service_add_port.yaml
#
#

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: manila-csi-driver-controller-metrics-serving-cert
  labels:
    app: manila-csi-driver-controller-metrics
  name: manila-csi-driver-controller-metrics
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: provisioner-m
    port: 9203
    protocol: TCP
    targetPort: provisioner-m
  - name: resizer-m
    port: 9204
    protocol: TCP
    targetPort: resizer-m
  - name: snapshotter-m
    port: 9205
    protocol: TCP
    targetPort: snapshotter-m
  - name: driver-m
    port: 9202
    protocol: TCP
    targetPort: driver-m
  selector:
    app: manila-csi-driver-controller
  sessionAffinity: None
  type: ClusterIP
