assets/overlays/openstack-manila/generated/standalone/network-policy-allow-egress-to-api-server.yaml
# Generated file. Do not edit. Update using "make update".
#
# Loaded from overlays/openstack-manila/base/network-policy-allow-egress-to-api-server.yaml
#
#

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    capability.openshift.io/name: Storage
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: allow-egress-to-api-server
  namespace: ${NAMESPACE}
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
  podSelector:
    matchLabels:
      openshift.storage.network-policy.api-server: allow
  policyTypes:
  - Egress
